<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/nivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel" />

    <EditText
        android:id="@+id/level"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/experiencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experiencia" />

    <EditText
        android:id="@+id/experience"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/fuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuerza" />

    <EditText
        android:id="@+id/force"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/magia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magia" />

    <EditText
        android:id="@+id/magic"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargar" />
    
</LinearLayout>